--- a/public/index.html
+++ b/public/index.html
@@ -25,7 +25,7 @@
 
 </head>
 <body class="bg-gray-800 text-gray-300 flex flex-col items-center justify-center min-h-screen transition-colors duration-500" id="theme">
-<nav class="bg-gray-700 shadow-md rounded-full px-6 py-2 fixed top-6 left-1/2 transform -translate-x-1/2 z-50">
+<nav class="navbar bg-gray-700 shadow-md rounded-full px-6 py-2 fixed top-6 left-1/2 transform -translate-x-1/2 z-50">
     <ul class="navbar-hover-effect flex space-x-4">
         <li>
             <a href="#" class="text-sm neon-hover px-4 py-1 rounded">Home</a>
@@ -47,6 +47,19 @@
     <div class="toggle-icon moon">🌙</div>
     <div class="toggle-knob"></div>
 </div>
+
+
+<div class="center-container">
+    
+    <h1 class="name">
+        <span class="first-name">SHREYAS</span>
+        <span class="last-name">SNEH</span>
+    </h1>
+    
+    <p class="typewriter">Network Software Engineer / Del Analyst / Tech Enthusiast</p>
+</div>
+
+
 
 <script src="/js/script.js"></script>
 
